readme and header change

--- a/frontDevlearn/src/components/Header/styles.scss
+++ b/frontDevlearn/src/components/Header/styles.scss
@@ -6,7 +6,11 @@ header {
   text-align: right;
 
   .header-content {
-    
+    button {
+      margin: 0.5rem;
+      padding: 0 2rem;
+    }
+
     a {
       margin-right: 1rem;
       border: 2px solid var(--background);
